                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 15-10-2004 changed: Romanian language file (Thnx to bompy)
  - 15-10-2004 fixed: [ 1046845 ] Subtitles show a vertical bar
  - 14-10-2004 changed: cleaned up switching from/to fullscreen code
  - 14-10-2004 added: now GUI_MSG_PLAYBACK_STARTED is send on file start
  - 14-10-2004 fixed: hdd spindown never took total time of player to calc spindown
  - 14-10-2004 added: Boxalizer visz updated for sync fix (thanks mynci)
  - 14-10-2004 added: Log INFO message for each window loaded for the skin (to help debug)
  - 14-10-2004 fixed: Music overlay didn't hide all controls/textures + moved up randomly
  - 13-10-2004 fixed: video overlay showed 2 colons when scrolling year and director
  - 13-10-2004 changed: multiple exact and inexact cddb matches are now listed with albumname and artist in select dialog
  - 13-10-2004 fixed: cddb doesn't respond to multiple exact matches
  - 12-10-2004 fixed: multi channel DTS software decode, major in mplayer dll tree
  - 12-10-2004 added: prelim. support for Xecutor LCD (untested) [ 1021947 ] + minor modifications
  - 12-10-2004 changed: System used to determine a single artist compilation (with contributing artists).
  - 12-10-2004 changed: Multiple artists/genres are detected using " / " instead of "/" (Have fun AC/DC fans :)
  - 12-10-2004 added: On scan, we commit to the database every 500 songs, instead of only at the end.
  - 12-10-2004 changed: Replaced "Stack" with IMDb on all video views except Files.
  - 12-10-2004 fixed: My Programs database uses depth info when retrieving programs for shares.
			Fixes problem with a share of E:\Games with depth 1 and a share of E:\Games\Emulators